# SDTFE

./: CMakeLists.txt  pyproject.toml  searchindex.js  setup.py
.github/workflows/: build.yaml  sphinx.yml
branch/fix-build/python/: index.html
branch/qhull-fix/: .buildinfo  index.html
branch/qhull-fix/_modules/: index.html
branch/qhull-fix/executables/: index.html
branch/qhull-version/genindex/: index.html
branch/qhull-version/search/: index.html
python/: CMakeLists.txt
src/: triangulate.c
