[project]
name = "pydtfe"
version = "0.1.1"
dependencies = [
    "numpy"
]

[project.optional-dependencies]
docs = [
    "Sphinx",
    "sphinx-rtd-theme",
    "sphinxcontrib-napoleon",
    "numpydoc myst-parser"
]

[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "cmake>=3.11",
]
build-backend = "setuptools.build_meta"

